<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/setServiceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/setServiceName_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/setServiceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/setServiceDescription_hint"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/setServicePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/setServicePrice_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonAddNewService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addButton_text" />

</LinearLayout>
