<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="3">


        <Button
            android:id="@+id/buttonShowDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonToSeeDB_text" />

        <Button
            android:id="@+id/buttonAddToDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonToChangeDB_text"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonDeleteFromDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonToChangeLastNoteInDB_text"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>